--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,12 @@
 machine:
-  node:
-    version: 0.10.36
+  services:
+    - docker
+
+dependencies:
+  override:
+    - docker build -t hello-ci-workflow .
 
 test:
   override:
-    - ./node_modules/.bin/mocha
+    - docker run -d -p 3000:3000 hello-ci-workflow; sleep 10
+    - curl --retry 10 --retry-delay 5 -v http://localhost:3000
