--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   },
   "devDependencies": {
     "mocha": "^2.2.4"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "test": "./node_modules/.bin/mocha"
   }
 }
