--- a/circle.yml
+++ b/circle.yml
@@ -8,5 +8,6 @@ dependencies:
 
 test:
   override:
-    - docker run -d -p 3000:3000 hello-ci-workflow; sleep 10
-    - curl --retry 10 --retry-delay 5 -v http://localhost:3000
+    - ./node_modules/.bin/mocha
+    # - docker run -d -p 3000:3000 hello-ci-workflow; sleep 10
+    # - curl --retry 10 --retry-delay 5 -v http://localhost:3000
