--- a/circle.yml
+++ b/circle.yml
@@ -9,5 +9,5 @@ dependencies:
 test:
   override:
     - ./node_modules/.bin/mocha
-    # - docker run -d -p 3000:3000 hello-ci-workflow; sleep 10
-    # - curl --retry 10 --retry-delay 5 -v http://localhost:3000
+    - docker run -d -p 3000:3000 hello-ci-workflow; sleep 10
+    - curl --retry 10 --retry-delay 5 -v http://localhost:3000
